--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   "dependencies": {
     "@google-cloud/functions-framework": "^1.8.0",
     "@google-cloud/secret-manager": "^3.7.1",
+    "@google-cloud/storage": "^5.8.5",
     "twilio": "^3.63.1"
   },
   "scripts": {
-    "start reply": "functions-framework --target=reply"
+    "start_reply": "functions-framework --target=reply",
+    "start": "functions-framework --target=send_boys"
   }
 }
