--- a/package.json
+++ b/package.json
@@ -8,11 +8,17 @@
     "@google-cloud/functions-framework": "^1.8.0",
     "@google-cloud/secret-manager": "^3.7.1",
     "@google-cloud/storage": "^5.8.5",
-    "body-parser": "^1.19.0",
+    "sinon": "^11.1.1",
     "twilio": "^3.63.1"
   },
   "scripts": {
     "start_reply": "functions-framework --target=reply",
-    "start": "functions-framework --target=send_boys"
+    "start": "functions-framework --target=send_boys",
+    "test": "mocha './tests/'"
+  },
+  "devDependencies": {
+    "chai": "^4.3.4",
+    "mocha": "^9.0.2",
+    "mocha-each": "^2.0.1"
   }
 }
